fixed spacing around header/footer in the jsdoc

--- a/tools/jsdoc-toolkit-2.4.0/templates/fiveui/static/style.css
+++ b/tools/jsdoc-toolkit-2.4.0/templates/fiveui/static/style.css
@@ -24,6 +24,8 @@
   header {
     background: #366689;
     height: 45px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   #logo {
     display: inline-block;
@@ -69,6 +71,8 @@
     clear: both;
     margin-top: 120px;
     padding-top: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
     background: #366689;
     min-height: 150px;
     color: white;
